static/events/main.css
/* ... */
.modal-content {
    background-color: var(--modal-bg-color);
    backdrop-filter: blur(10px);
    color: #fff;
}

.selected-border {
    border: solid medium var(--accent-color);
}

.filter-grayscale {
    filter: grayscale(1);
    transition: filter .5s ease;
}

.filter-grayscale:hover {
    filter: none;
}

.event-title {
    font-size: 3.5rem;
    text-align: center;
    word-wrap: break-word;
}

.event-clock-div {
    user-select: none;
    overflow: hidden;
    transition: .6s ease;
}

.clock-event-not-started::before {
    content: "";
    position: absolute;
    width: 200%;
    height: 100%;
    top: 0;
    left: -100%;
    z-index: -1;
    background: linear-gradient(
        90deg,
        var(--moving-bg-color) 0%,
        var(--moving-bg-color) 49%,
        var(--event-div-bg) 51%,
        var(--event-div-bg) 100%
    );
    animation-name: timerNotStartedAnimation;
    animation-duration: 6s;
    animation-iteration-count: infinite;
    animation-direction: alternate;
    animation-play-state: running;
    animation-timing-function: cubic-bezier(.7,.2,.3,.8);
}

.clock-event-started::before {
    content: "";
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0%;
    left: 0%;
    z-index: -1;
    background: linear-gradient(110deg,
        var(--event-started-bg) 35%,
        var(--shimmer-color) 50%,
        var(--event-started-bg) 65%);
    background-size: 200% 100%;
    animation-name: shimmerEffect;
    animation-duration: 5s;
    animation-fill-mode: forwards;
    animation-iteration-count: infinite;
    animation-timing-function: ease-in-out;
    animation-direction: normal;
}

.clock-event-ended::before {
    content: "";
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0%;
    left: 0%;
    z-index: -1;
    background-color: var(--event-ended-bg);
}

.event-tot-div {
    background-color: var(--event-div-bg);
    transition: background-color 1s ease;
}

.event-info-div {
    background-color: var(--event-div-bg);
    transition: background-color 1s ease;
    word-wrap: break-word;
}

.blurred {
    backdrop-filter: blur(10px);
}

.event-chart-div {
    background-color: var(--event-div-bg);
    transition: background-color 1s ease;
}

.card {
    color: var(--color);
    background-color: var(--card-bg-color);
}

.card-footer {
    color: var(--accent-color);
    user-select: none;
}

.removed-participant {
    font-size: 1rem;
    user-select: none;
}

.removed-participant:hover {
    transform: scale(1.2);
}

.thumbnail-row {
    height: 25em;
    overflow-y: auto;
    overflow-x: hidden;
}

.theme-thumbnail {
    background-color: var(--body-bg-color);
    color: #fff;
    cursor: pointer;
    transition: all .3s;
}

.theme-thumbnail:hover {
    opacity: 1;
    transform: scale(1.2);
    z-index: 10;
}

.theme-thumbnail:hover::before {
    opacity: 1;
    z-index: 10;
}

.thumbnail-selected {
    border: solid medium var(--accent-color);
}

.thumbnail-selected::before {
    opacity: 1 !important;
}

.btn-check + label {
    text-decoration: line-through;
}

.btn-check:checked + label {
    text-decoration: none;
}

.btn:hover, .btn:focus {
    transform: translateY(-5px) scale(1.05);
    transition: transform .3s ease-in-out;
    z-index: 10;
}

/* Event themes */
div[data-theme] {
    position: relative;
    background-color: rgba(0,0,0,.1);
}

div[data-theme]::before {
    content: "";
    position: absolute;
    left: 0;
    top:0;
    width: 100%;
    height: 100%;
    background-color: var(--navbar-bg-color);
    background-size: cover;
    background-repeat: no-repeat;
    z-index: -1;
    border-radius: inherit;
}

div[data-theme="beach"]::before {
    background-image: url('https://schedama-assets.s3.eu-central-1.amazonaws.com/img/beach.jpg');
    opacity: .4;
}

div[data-theme="birthday"]::before {
    background-image: url('https://schedama-assets.s3.eu-central-1.amazonaws.com/img/birthday.jpg');
    opacity: .4;
}

div[data-theme="drink"]::before {
    background-image: url('https://schedama-assets.s3.eu-central-1.amazonaws.com/img/drink.jpg');
    opacity: .4;
}

div[data-theme="forest"]::before {
    background-image: url('https://schedama-assets.s3.eu-central-1.amazonaws.com/img/forest.jpg');
    opacity: .4;
}

div[data-theme="graduation"]::before {
    background-image: url('https://schedama-assets.s3.eu-central-1.amazonaws.com/img/graduation.jpg');
    opacity: .4;
}

div[data-theme="match"]::before {
    background-image: url('https://schedama-assets.s3.eu-central-1.amazonaws.com/img/match.jpg');
    opacity: .4;
}

div[data-theme="meeting"]::before {
    background-image: url('https://schedama-assets.s3.eu-central-1.amazonaws.com/img/meeting.jpg');
    opacity: .5;
}

div[data-theme="mountain"]::before {
    background-image: url('https://schedama-assets.s3.eu-central-1.amazonaws.com/img/mountain.jpg');
    opacity: .4;
}

div[data-theme="music"]::before {
    background-image: url('https://schedama-assets.s3.eu-central-1.amazonaws.com/img/music.jpg');
    opacity: .4;
}

div[data-theme="pizza"]::before {
    background-image: url('https://schedama-assets.s3.eu-central-1.amazonaws.com/img/pizza.jpg');
    opacity: .4;
}

div[data-theme="popcorn"]::before {
    background-image: url('https://schedama-assets.s3.eu-central-1.amazonaws.com/img/popcorn.jpg');
    opacity: .4;
}

div[data-theme="relax"]::before {
    background-image: url('https://schedama-assets.s3.eu-central-1.amazonaws.com/img/relax.jpg');
    opacity: .4;
}

div[data-theme="ticket"]::before {
    background-image: url('https://schedama-assets.s3.eu-central-1.amazonaws.com/img/ticket.jpg');
    opacity: .4;
}

div[data-theme="travel"]::before {
    background-image: url('https://schedama-assets.s3.eu-central-1.amazonaws.com/img/travel.jpg');
    opacity: .4;
}

.reaction-btn {
    color: var(--color);
    font-size: 1.5rem;
    background: none;
    border: none;
    cursor: pointer;
    padding: 0.5rem;
    transition: all .4s ease;
}
/* ... */

